--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test" : "npx playwright test",
+    "test-ui":"npx playwright test --ui"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
@@ -19,6 +21,8 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@autoflowlabs/playwright": "^1.0.6",
+    "@playwright/test": "^1.41.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
