--- a/package.json
+++ b/package.json
@@ -7,23 +7,29 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test" : "npx playwright test",
-    "test-ui":"npx playwright test --ui"
+    "test": "npx playwright test",
+    "test-ui": "npx playwright test --ui"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
-    "react-toastify": "^9.1.3"
+    "react-shepherd": "^4.3.0",
+    "react-toastify": "^9.1.3",
+    "shepherd.js": "^11.2.0"
   },
   "devDependencies": {
     "@autoflowlabs/playwright": "^1.0.6",
     "@playwright/test": "^1.41.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
