--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "framer-motion": "^10.16.16",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
+    "next-seo": "^6.5.0",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
+    "react-share": "^5.1.0",
     "react-shepherd": "^4.3.0",
     "react-toastify": "^9.1.3",
     "shepherd.js": "^11.2.0"
